--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Universal Agents - Agentes de IA para WhatsApp</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="facebook-domain-verification" content="m2kzmns96pp3gion5jzuff0mfqom92" />
 </head>
 <body>
     <!-- Header -->
