--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
             <p>&copy; 2025 Universal Agents. Todos los derechos reservados.</p>
             <p class="footer-links">
                 Agentes de IA para WhatsApp | 
-                <a href="privacy.html">Política de Privacidad</a> | 
-                <a href="#contacto">Términos de Servicio</a>
+                <a href="privacy.html">Política de Privacidad</a>
             </p>
         </div>
     </footer>
